--- a/css/index.css
+++ b/css/index.css
@@ -169,7 +169,7 @@ body{
                     position: relative;
                     width: 100%;
                     height: 980px;
-                    background: url(/img/main_visual_bg.jpg) repeat 0 0 / 50px;
+                    background: url(../img/main_visual_bg.jpg) repeat 0 0 / 50px;
 
                 }
 
