--- a/css/page.css
+++ b/css/page.css
@@ -47,23 +47,6 @@ body{
                 line-height: 20px;
                 margin-right: 70px;
             }
-            .top {
-                position: absolute;
-                display: flex;
-                width: 60px;
-                height: 60px;
-                border-radius: 10px;
-                line-height: 60px;
-                justify-content: center;
-                top: 700px;
-                cursor: pointer;
-                right: -20px;
-                font-size: 0.8rem;
-                color: white;
-                background: #4a679e;
-                z-index: 9;
-            
-            }
             .sns {
                 position: fixed;
                 display: flex;
@@ -79,6 +62,24 @@ body{
                 
                     margin-top: 10px;
                 }
+                .top {
+                    position: absolute;
+                    display: flex;
+                    width: 60px;
+                    height: 60px;
+                    border-radius: 10px;
+                    line-height: 60px;
+                    justify-content: center;
+                    top: 700px;
+                    cursor: pointer;
+                    right: -20px;
+                    font-size: 0.8rem;
+                    color: white;
+                    background: #4a679e;
+                    z-index: 9;
+                
+                }
+            
     /*-------------------------바디---------------------------*/
 
         .section_02 {
@@ -190,13 +191,38 @@ body{
                         }
                     
     /*-------------------------키티 가족---------------------------*/
+            .section_03 {
+                position: relative;
+                width: 100%;
+                height: 200px;
+            }
+                .section_03 > title {
+                    position: relative;
+                    display: inline-block;
+                    width: 100%;
+                    height: 100px;
+                    line-height: 100px;
+                    font-size: 3.3rem;
+                    text-align: center;
+                    margin-top: 70px;
+                } 
+
                 .character_list {
                     display: flex;
                     flex-flow: row wrap;
                     width: 1220px;
-                    height: 1220px;
+                    height: 620px;
                     margin: 0 auto;
-                    margin-top: 40px;
+                    
+                }
+                .character_list_2 {
+                    display: flex;
+                    flex-flow: row wrap;
+                    width: 1220px;
+                    height: 940px;
+                    margin: 0 auto;
+                    margin-bottom: 100px;
+                    
                 }
                     .ch_list {
                         display: flex;
@@ -205,6 +231,7 @@ body{
                         height: 285px;
                         justify-content: space-between;
                         box-sizing: border-box;
+                    
                     }
                         .item {
                             display: flex;
@@ -213,7 +240,26 @@ body{
                             height: 285px;
                             border: 1px solid #ddd;
                             border-radius: 20px;
+                            box-sizing: border-box;
                             background: white;
+                            
+                        }
+                        .item:hover > .k_hover {
+                            display: block;
+                            transition: all 1s;
+                        }
+                        
+                        .k_hover {
+                            position: absolute;
+                            display: none;
+                            flex-flow: row wrap;
+                            width: 285px;
+                            height: 285px;
+                            border-radius: 20px;
+                            border: 1px solid #ffa09c;
+                            box-sizing: border-box;
+                            transition: all 1s;
+                            background: #ffa09c
                         }
                             .ch_img {
                                 position: relative;
@@ -221,21 +267,19 @@ body{
                                 clear: both;
                                 width: 285px;
                                 height: 200px;
-
+                                margin: 0 auto;
+                                padding-left: 5px;
+                                
                             }
-                                .ch_img > #kitty:hover  {
-                                    content: url(../img/new_main_crt1_ov.png);
-                                }
                                 .text_box {
+                                    position: relative;
                                     display: flex;
                                     flex-flow: row wrap;
                                     width: 285px;
                                     height: 85px;
+
                                 }   
-                                    .blank {
-                                        width: 285px;
-                                        height: 15px;
-                                    }
+                                    
                                     .ch_name {
                                         width: 285px;
                                         text-align: center;
@@ -243,14 +287,40 @@ body{
                                         line-height: 35px;
                                         font-size: 1.5rem;
                                         color: #444;
+                                        margin-top: 20px;
+                                        
                                     }
-                                    .ch_name_e {
-                                        width: 285px;
-                                        height: 35px;
-                                        text-align: center;
-                                        font-size: 0.7rem;
-                                        color: #bbbbbb;
-                                    }
+                        
+                                .name_title {
+                                    position: relative;
+                                    width: 285px;
+                                    height: 60px;
+                                    font-size: 1.3rem;
+                                    line-height: 60px;
+                                    text-align: center;
+                                    top: 60px;
+                                    color: white;
+                                }
+                                .name_line {
+                                    position: relative;
+                                    width: 30px;
+                                    height: 2px;
+                                    top: 50px;
+                                    background: white;
+                                    margin: 0 auto;
+                                }
+                                .name_text {
+                                    position: relative;
+                                    text-align: center;
+                                    width: 285px;
+                                    height: 200px;
+                                    padding: 10px;
+                                    font-size: 11pt;
+                                    top: 60px;
+                                    box-sizing: border-box;
+                                    color: white;
+                                }
+                                    
     /*------------------------- 풋터 ---------------------------*/
         .personal {
             position: relative;
