--- a/css/media_768.css
+++ b/css/media_768.css
@@ -1,5 +1,6 @@
 @media all and (max-width: 768px){
-        *{
+        *{  
+            width: 768px;
             margin: 0;
             padding: 0;
             overflow-x: hidden;
