--- a/css/media_768.css
+++ b/css/media_768.css
@@ -1,6 +1,5 @@
 @media all and (max-width: 768px){
-        *{  
-            width: 768px;
+        html, body{  
             margin: 0;
             padding: 0;
             overflow-x: hidden;
