--- a/css/media_768.css
+++ b/css/media_768.css
@@ -2,7 +2,7 @@
         html, body{  
             margin: 0;
             padding: 0;
-            overflow-x: hidden;
+            /* overflow-x: hidden; */
         }
 
         .section_01 {
@@ -81,7 +81,7 @@
             .top {
                 position: relative;
                 display: fixed;
-                left:0px;
+                left:200px;
             
             }
             .main_title_img {
