--- a/css/media_768.css
+++ b/css/media_768.css
@@ -372,7 +372,7 @@
                                 width: 450px;
                                 height: 200px;
                             }
-                            .map_text {
+                            .map_txt {
                                 display: flex;
                                 width: 450px;
                                 height: 250px;
