--- a/css/media_768.css
+++ b/css/media_768.css
@@ -355,9 +355,10 @@
                         position: relative;
                         display: flex;
                         flex-flow: row wrap;
-                        width: 400px;
-                        height: 400px;
+                        width: 300px;
+                        height: 300px;
                         top: 10px;
+                        background:yellow;
                     }
                         .map_img {
                             position: relative;
