--- a/css/media_768.css
+++ b/css/media_768.css
@@ -181,6 +181,10 @@
                     width: 200px;
                     height: 140px;
                 }
+                .ch_img > img {
+                    width: 200px;
+                    height: 140px;
+                }
                     .ch_img > #kitty:hover  {
                         width:200px;
                         height: 140px;
