--- a/css/index.css
+++ b/css/index.css
@@ -46,7 +46,7 @@ body{
                 line-height: 20px;
                 margin-right: 70px;
             }
-            .media_ham_menu {
+            .media_ham_icon {
                 display: none;
             }
 
