--- a/css/media_768.css
+++ b/css/media_768.css
@@ -40,7 +40,7 @@
                         width: 40px;
                         height: 40px;
                         right: 10px;
-                        background: yellow;
+                        /* background: yellow; */
                     }
                   
             .main_title_bg {
