--- a/css/media_768.css
+++ b/css/media_768.css
@@ -299,28 +299,38 @@
             position: relative;
             display: flex;
             flex-flow: row wrap;
-            width: calc(100% - 30px);
+            width: 420px;
             height: 420px;
             margin-top: 0px;
-            
-            background: yellow;
-           
+            margin: 0 auto;
+            /* background: yellow;
+            */
         }
             .comapany_each {
                 position: relative;
                 display: flex;
                 flex-flow: row wrap;
-                width: 200px;
-                height: 150px;
+                width: 190px;
+                height: 190px;
                 border-right: none;
-                
+                align-items: center;
+                padding-top: 10px;
+                margin: 10px;
+               
             
             }   
+
+                #c_icon {
+                    display: flex;
+                    
+                }
                 #c_title {
-                    width: 200px;
+                    display: flex;
+                    width: 100%;
                     height: 30px;
                     margin: 0 auto;
                     font-size: 1.2rem;
+                    
                 }
                 #c_text {
                     display: none;
@@ -329,11 +339,11 @@
                     width: 80px;
                     height: 30px;
                     top: 130px;
-                    left: 60px;
-                    margin-top: 10px;
+                    left: 55px;
+                    margin-top: 20px;
                     line-height: 30px;
                     font-size: 0.7rem;
-                    
+                   
                 }
     /*--------------------------회사------------------------*/ 
     .section_04 {
