--- a/css/media_768.css
+++ b/css/media_768.css
@@ -463,7 +463,7 @@
                         width: 350px;
                         height: 350px;
                         top: 10px;
-                        background:yellow;
+                        background:#fff;
                     }
                         .map_img {
                             display: flex;
@@ -472,7 +472,10 @@
                             height: 200px;
                         }
                             #kitty_car {
-                                display: none;
+                                display: flex;
+                                width: 35%;
+                                top: 290px;
+                                left: 120px;
                             }
                             .map_img > iframe {
                                 display: flex;
@@ -508,20 +511,14 @@
                                 justify-content: center;
                                 padding-left: 0px;
                                 font-size: 8pt;
-                                top:10px;
+                                top:-30px;
                                 /* background: palegreen; */
                             }
                             .map_03 {
-                                display: flex;
-                                flex-flow: row wrap;
-                                width: 350px;
-                                height: 80px;
-                                line-height: 20px;
-                                font-size: 0.8rem;
-                                top:18px;
-                                padding-left: 0px;
-                                background: pink;
+                                display: none;
+                                
                             }
+                                
             
             .personal{
                 position: relative;
