--- a/css/media_768.css
+++ b/css/media_768.css
@@ -49,7 +49,7 @@
                         position: absolute;
                         visibility: hidden;
                         top:52px;
-                        left:-50px;
+                        left:-40px;
                         width: 600px;
                         height: 1000px;
                         justify-content: center;
@@ -200,7 +200,7 @@
             margin-top: 6px;
             margin: 0 auto;
             justify-content: space-around;
-            
+            margin-left: 20px;
             background: yellow;
         }
             .item {
@@ -564,7 +564,7 @@
                 .info01 {
                     width: 100%;
                     height: 30px;
-                    left: 60px;
+                    left: 70px;
                     top:70px;
                     display: flex;
                     justify-content: center;
